<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id = "@+id/nav_budget_form_edit"
        android:title = "@string/menu_edit"
        android:orderInCategory = "1"
        />
    <item
        android:id = "@+id/nav_budget_form_clone"
        android:title = "@string/menu_clone"
        android:orderInCategory = "2"
        />
    <item
        android:id = "@+id/nav_budget_form_expenditures"
        android:title = "@string/menu_budget_expenditures"
        android:orderInCategory = "3"
        />
    <item
        android:id = "@+id/nav_budget_form_spendings"
        android:title = "@string/menu_budget_spendings"
        android:orderInCategory = "4"
        />
    <item
        android:id = "@+id/nav_budget_form_remove"
        android:title = "@string/menu_remove"
        android:orderInCategory = "5"
        />
</menu>