<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable name="model"
            type="com.mas.mobile.presentation.viewmodel.MessageTemplateViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        tools:context=".presentation.activity.MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/hint_message_template_sender"
            android:enabled="@{model.isEditable()}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLength="30"
                android:singleLine="true"
                android:text="@={model.sender}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/hint_message_template_pattern"
            android:enabled="@{model.isEditable()}"
            app:error="@{model.patternError}"
            app:errorEnabled='@{!(model.patternError == "")}'>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLength="200"
                android:singleLine="true"
                android:text="@={model.pattern}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/hint_message_template_example"
            android:enabled="@{model.isEditable()}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:singleLine="true"
                app:spannableText="@={model.example}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTemplateCurrencyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:enabled="@{model.isEditable()}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message_template_currency"
                android:maxLength="3"
                android:singleLine="true"
                android:editable="false"
                android:focusable="false"
                android:text="@{model.currency.currencyCode}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:text="@string/hint_message_template_enabled"
                android:enabled="@{model.isEditable()}"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@={model.isEnabled()}"
                android:enabled="@{model.isEditable()}"/>
        </LinearLayout>

        <Button
            android:id="@+id/messageTemplateSaveButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:enabled="@{model.isEditable()}"
            android:visibility="@{model.isEditable() ? View.VISIBLE : View.GONE}"
            android:text="@string/btn_save" />
    </LinearLayout>
</layout>